--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,12 +4,14 @@ phases:
   build:
       commands:
           - npm install
-          - npm run webpack
+          - npm run webpack ## HERE?
 artifacts:
     files:
         - index.html
         - favicon.ico
         - RobinNorwood-Resume.pdf
-        - styles/rain.css
+        - styles/main.css
         - images/*
-        - dist/bundle.js
+        - dist/* #TOLD CODEBUILD WHAT TO DO
+
+            # tried fixing by changing dist and specifying bundle.js
