--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
+    "test-watch": "jest --watch",
     "webpack": "webpack",
     "webpack-watch": "webpack --watch"
   },
